Add Karaf 4.2.0 release

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -53,10 +53,9 @@
                     <b><a href="#container">Karaf Container</a></b>
                     <ul>
                         <li><a href="#container-schedule">Schedule</a></li>
-                        <li><a href="#container-420M2">4.2.0.M2</a></li>
+                        <li><a href="#container-420">4.2.0</a></li>
                         <li><a href="#container-415">4.1.5</a></li>
                         <li><a href="#container-4010">4.0.10</a></li>
-                        <li><a href="#container-309">3.0.9</a></li>
                     </ul>
                 </li>
                 <li>
@@ -137,7 +136,7 @@
                         <td>3.0.x</td>
                         <td>5</td>
                         <td>6 (up to Karaf 3.0.5) / 7 / 8</td>
-                        <td>Maintenance</td>
+                        <td>Not Active</td>
                         <td>3.0.9</td>
                         <td></td>
                         <td></td>
@@ -146,10 +145,10 @@
                         <td>4.0.x</td>
                         <td>5</td>
                         <td>7 / 8</td>
-                        <td>Stable</td>
+                        <td>Not Active</td>
                         <td>4.0.10</td>
-                        <td>4.0.11</td>
-                        <td>01/18</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -163,11 +162,11 @@
                     <tr>
                         <td>4.2.x</td>
                         <td>6</td>
-                        <td>8 / 9</td>
-                        <td>Development</td>
-                        <td>4.2.0.M2</td>
+                        <td>8 / 9 / 10</td>
+                        <td>Stable</td>
                         <td>4.2.0</td>
-                        <td>03/18</td>
+                        <td>4.2.1</td>
+                        <td>05/18</td>
                     </tr>
                 </table>
                 
@@ -175,15 +174,15 @@
 
                 <div class="content--panel--version">
 
-                    <h3 id="container-420M2">Karaf Container 4.2.0.M2 (<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">Release Notes</a>)</h3>
+                    <h3 id="container-420">Karaf Container 4.2.0 (<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342076')">Release Notes</a>)</h3>
                     <div class="container-fluid">
                         <div class="row-fluid">
                             <div class="span3">
                                 Binary Distribution
                             </div>
                             <div class="span9">
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.sha1">SHA1</a>] - 
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.0.M2/apache-karaf-4.2.0.M2.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.sha1">SHA1</a>]
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0/apache-karaf-4.2.0.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz.sha512">SHA512</a>] - 
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0/apache-karaf-4.2.0.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.0/apache-karaf-4.2.0.zip.sha512">SHA512</a>]
                             </div>
                         </div>
                         <div class="row-fluid">
@@ -191,8 +190,8 @@
                                 Source Distribution
                             </div>
                             <div class="span9">
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.tar.gz.sha1">SHA1</a>] - 
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.sha1">SHA1</a>]
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0/apache-karaf-4.2.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0-src.tar.gz.sha512">SHA512</a>] - 
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.0/apache-karaf-4.2.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0-src.zip.sha512">SHA512</a>]
                             </div>
                         </div>
                         <div class="row-fluid">
@@ -267,40 +266,6 @@
                                 [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/latest/')">online</a>
                                 | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/4_x.html">html</a> | <a
                                     href="http://www.apache.org/dyn/closer.lua/karaf/documentation/4_x.pdf">pdf</a>]
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="content--panel--separator"></div>
-
-                    <h3 id="container-309">Karaf Container 3.0.9 (<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">Release Notes</a>)</h3>
-                    <div class="container-fluid">
-                        <div class="row-fluid">
-                            <div class="span3">
-                                Binary Distribution
-                            </div>
-                            <div class="span9">
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.9/apache-karaf-3.0.9.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.tar.gz.sha1">SHA1</a>] - 
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.9/apache-karaf-3.0.9.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.zip.sha1">SHA1</a>]
-                            </div>
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                Source Distribution
-                            </div>
-                            <div class="span9">
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.9/apache-karaf-3.0.9-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.tar.gz.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.tar.gz.sha1">SHA1</a>] - 
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.9/apache-karaf-3.0.9-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.zip.md5">MD5</a>] [<a href="https://www.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.zip.sha1">SHA1</a>]
-                            </div>
-                        </div>
-                        <div class="row-fluid">
-                            <div class="span3">
-                                Documentation
-                            </div>
-                            <div class="span9">
-                                [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/latest-3/')">online</a>
-                                | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/3_x.html">html</a> | <a
-                                    href="http://www.apache.org/dyn/closer.lua/karaf/documentation/3_x.pdf">pdf</a>]
                             </div>
                         </div>
                     </div>
