--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,6 +77,15 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
+                                <b>Karaf Container 4.2.0 has been released! (9/4/18)</b> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342076')">Release Notes</a>)
+                               </div>
+                           </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                               <div class="container-fluid">
                                 <b>Karaf Container 3.0.9 has been released! (2/3/18)</b> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">Release Notes</a>)
                                </div>
                            </div>
@@ -177,15 +186,6 @@
                             <div class="banner--text">
                                <div class="container-fluid">
                                 <b>Karaf Decanter 1.4.0 has been released! (23/7/17)</b> - Apache Karaf Decanter 1.4.0 is a new major release on the Decanter 1.x serie including bug fixes and couple of new features like the new Apache Camel Event Notifier. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338800')">Release Notes</a>)
-                               </div>
-                           </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                               <div class="container-fluid">
-                                <b>Karaf Cellar 4.0.4 has been released! (15/5/17)</b> - Apache Karaf Cellar 4.0.4 is a maintenance release on the Cellar 4.x serie including important bug fixes. (<a class="banner--link" href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338929')">Release Notes</a>)
                                </div>
                            </div>
                         </center>
