--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -64,30 +64,35 @@
         <div id="content">
             <h2 id="2018">2018</h2>
             <div class="content--panel content--news">
+                      <h3>Karaf Container 4.2.0 has been released! (9/4/18)</h3>
+              Ths is the first GA release on the 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features.<br>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342076')">> Release Notes</a>
+            </div> 
+            <div class="content--panel content--news">
                       <h3>Karaf Container 3.0.9 has been released! (2/3/18)</h3>
               Ths is an update patch for Apache Karaf 3.0.x, containing minor bug fixes and dependency upgrades.<br>
-              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">> Release Notes</a>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">> Release Notes</a>
             </div> 
             <div class="content--panel content--news">
                       <h3>Karaf Container 4.1.5 has been released! (15/2/18)</h3>
               Ths is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements.<br>
-              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342294')">> Release Notes</a>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342294')">> Release Notes</a>
             </div> 
             <div class="content--panel content--news">
                       <h3>Karaf Container 4.2.0.M2 has been released! (2/1/18)</h3>
               Ths is the second technical preview for the 4.2.x series. This is not a GA. The purpose is to continue the test campaign in preparation for the 4.2.0.GA release. Compared to 4.2.0.M1, 4.2.0.M2 contains bug fixes and improvements, especially around the Java 9 support.
-              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">> Release Notes</a>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342357')">> Release Notes</a>
             </div> 
             <div class="content--panel content--news">
                       <h3>Karaf Cave 4.1.0 has been released! (2/1/18)</h3>
               Ths is the first release in the Cave 4.1.x series. It brings bug fixes, improvements, and the new Deployer feature. <br>
-              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340462')">> Release Notes</a>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340462')">> Release Notes</a>
             </div> 
             <h2 id="2017">2017</h2>
             <div class="content--panel content--news">
                       <h3>Karaf Container 4.1.4 has been released! (19/12/17)</h3>
               Ths is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements.<br>
-              <a href="download.html">> Download</a><br><a href="javascriipt:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341702')">> Release Notes</a>
+              <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341702')">> Release Notes</a>
             </div> 
             <div class="content--panel content--news">
 		      <h3>Karaf Cellar 4.1.1 has been released! (28/09/17)</h3>
