--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -74,16 +74,6 @@
                         <th>Notes</th>
                     </tr>
                     <tr>
-                        <td>4.1.4</td>
-                        <td><a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.sha1">SHA1</a>]<br>
-                            <a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.sha1">SHA1</a>]
-                        </td>
-                        <td><a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.sha1">SHA1</a>]<br>
-                            <a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.sha1">SHA1</a>]
-                        </td>
-                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341702')">Release Notes</a></td>
-                    </tr>
-                    <tr>
                         <td>4.2.0.M2</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.sha1">SHA1</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.sha1">SHA1</a>]
@@ -92,6 +82,16 @@
                             <a href="http://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2-src.zip.sha1">SHA1</a>]
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341130')">Release Notes</a></td>
+                    </tr>
+                    <tr>
+                        <td>4.1.4</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.tar.gz.sha1">SHA1</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4.zip.sha1">SHA1</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.tar.gz.sha1">SHA1</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.4/apache-karaf-4.1.4-src.zip.sha1">SHA1</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341702')">Release Notes</a></td>
                     </tr>
                     <tr>
                         <td>4.1.3</td>
@@ -236,6 +236,19 @@
                             | <a href="http://archive.apache.org/dist/karaf/4.0.0/apache-karaf-4.0.0-src.zip">zip</a>
                         </td>
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332045')">Release Notes</a></td>
+                    </tr>
+
+                    <tr>
+                        <td>3.0.9</h3>
+                        <td><a
+                                href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.tar.gz">tar.gz</a> |
+                            <a href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.zip">zip</a>
+                        </td>
+                        <td><a
+                                href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.tar.gz">tar.gz</a>
+                            | <a href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9-src.zip">zip</a>
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338081')">Release Notes</a></td>
                     </tr>
 
                     <tr>
