Fix 4.2.0 homepage block

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -315,7 +315,7 @@
                                     Run your applications in<br><br><br>
                                     <a href="projects.html#container">Karaf Container</a>
                                     <div class="offset4 offset-feature--separator"></div>
-                                    Last version <a href="download.html">4.2.0.M2</a><br>(02/01/18)<br>
+                                    Last version <a href="download.html">4.2.0</a><br>(09/04/18)<br>
                                 </div>
                                 <div class="span3 offset-feature--project-square">
                                     Manage bunch of clustered instances with <br><br>
