Add NEWS entry in menu navbar

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -26,6 +26,9 @@
                 </div>
                 <ul class="nav pull-right">
                     <li class="navbar-link">
+                        <a href="news.html">News</a>
+                    </li>
+                    <li class="navbar-link">
                         <a href="download.html">Download</a>
                     </li>
                     <li class="navbar-link">
@@ -38,8 +41,8 @@
                         <a href="community.html">Community</a>
                     </li>
                     <li class="navbar-link">
-                        <a href="http://archive.apache.org"><img src="images/apache-feather-tm.svg"/></a>
-                    </td>
+                        <a href="http://www.apache.org"><img src="images/apache-feather-tm.svg"/></a>
+                    </li>
                 </tr>
             </div>
         </div>
