--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html data-mobile-support="" data-search="" data-hero-banner="" data-platform-> Downloads="">
+<html data-mobile-support="" data-search="" data-hero-banner="" data-platform-downloads="">
 <head>
-    <meta http-equiv="content-type" context="text/html; charset=UTF-8">
+    <meta http-equiv="content-type" context="text/html" charset="UTF-8">
     <title>Apache Karaf</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no"
           id="Viewport" name="viewport">
@@ -25,6 +25,9 @@
                     <a class="karaf-logo" href="index.html"><span></span></a>
                 </div>
                 <ul class="nav pull-right">
+                    <li class="navbar-link">
+                        <a href="news.html">News</a>
+                    </li>
                     <li class="navbar-link">
                         <a href="download.html">Download</a>
                     </li>
