--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -26,6 +26,9 @@
                 </div>
                 <ul class="nav pull-right">
                     <li class="navbar-link">
+                        <a href="news.html">News</a>
+                    </li>
+                    <li class="navbar-link">
                         <a href="download.html">Download</a>
                     </li>
                     <li class="navbar-link">
