--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -40,8 +40,8 @@
                     <li class="navbar-link">
                         <a href="community.html">Community</a>
                     </li>
-                    <li class="navbar-link">
-                        <a href="http://www.apache.org"><img src="images/apache-feather-tm.svg"/></a>
+                    <li class="navbar-link-logo">
+                        <a href="http://www.apache.org"><img src="images/apache-feather-tm-new.svg" width="24px" /></a>
                     </li>
                 </ul>
             </div>
