Add news for the next ApacheCon event scheduled on september 2018 for Apache Karaf

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -80,6 +80,15 @@
                         <center>
                             <div class="banner--text">
                                <div class="container-fluid">
+                                <b>Apache Karaf talks on ApacheCon (12/5/18)</b> - JB will talk about Apache Karaf and how to build a complete enterprise platform mixing Karaf and his subprojects on thursday the 27th September 2018. (<a class="banner--link" href="news.html">Learn more</a>)
+                               </div>
+                           </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                               <div class="container-fluid">
                                 <b>Karaf Container 4.2.0 has been released! (9/4/18)</b> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a class="banner--link" href="news.html">Release Notes</a>)
                                </div>
                            </div>
