--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -67,6 +67,12 @@
         <div id="content">
             <h2 id="2018">2018</h2>
             <div class="content--panel content--news">
+                      <h3>Apache Karaf talks on ApacheCon (12/5/18)</h3>
+              JB will talk about Apache Karaf and how to build a complete enterprise platform mixing Karaf and his subprojects on thursday the 27th September 2018.
+              Save the date !<br>
+              <a href="javascript:var w = window.open('https://apachecon.dukecon.org/acna/2018/#/scheduledEvent/ea030ef30725de221')">> Learn more</a>
+            </div>
+            <div class="content--panel content--news">
                       <h3>Karaf Container 4.2.0 has been released! (9/4/18)</h3>
               Ths is the first GA release on the 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features.<br>
               <a href="download.html">> Download</a><br><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342076')">> Release Notes</a>
