[KARAF-5711] WIP: Add example section in documentation

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -71,6 +71,7 @@
                     </ul>
                 </li>
                 <li><b><a href="#decanter">Karaf Decanter</a></b></li>
+                <li><b><a href="#examples">Examples</a></b></li>
                 <li><b><a href="#security">Security Advisories</a></b></li>
                 <li><b><a href="#other">Other Resources</a></b>
                     <ul>
@@ -107,6 +108,148 @@
                     <li><h3>Karaf Decanter 2.x [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/decanter/latest-2/')">online</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/2_x.html">html</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/2_x.pdf">pdf</a>]</h3></li>
                     <li><h3>Karaf Decanter 1.x [<a href="javascript:var w = window.open('http://karaf.apache.org/manual/decanter/latest-1/')">online</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.html">html</a> | <a href="http://www.apache.org/dyn/closer.lua/karaf/documentation/decanter/1_x.pdf">pdf</a>]</h3></li>
                 </ul>
+            </div>
+
+            <div class="content--panel">
+                <h2 id="examples">Examples</h2>
+                <p>You are looking for some examples to learn how to implement bundle for Apache Karaf ? There is some usefull examples include in the source code, you can also browse and view documentation on the github of the projet.</p>
+                <p>If you are looking for examples that are missing here or you want to share your example with the community, please contact us on the mailing list and we will add it with pleasure.</p>
+                <br>
+                <table>
+                    <thead>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Github</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><strong>Blueprint</strong></td>
+                        <td>using services with XML or annotations.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-blueprint-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Branding</strong></td>
+                        <td>branding the look'n feel of the shell console for your own Karaf distribution.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-branding-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Shell Command</strong></td>
+                        <td>creating a shell command.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-command-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Deployer</strong></td>
+                        <td>creating a Karaf deployer service on the deploy folder.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-deployer-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Dump</strong></td>
+                        <td>creating a dump provider service.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-dump-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Integration test</strong></td>
+                        <td>creating integration tests in addition of unit tests for your bundles.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-itest-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>JDBC</strong></td>
+                        <td>using simple JDBC implementation with Pax-JDBC and an Apache Derby embedded database.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-jdbc-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>JPA</strong></td>
+                        <td>using JPA with entity manager for the persistence implementation.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-jpa-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Pax Logging Appender</strong></td>
+                        <td>registering a custom Pax Logging appender.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-log-appender-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Maven</strong></td>
+                        <td>using the Karaf Maven plugin with goals like assembly, client, deploy, kar, run...</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-maven-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>MBean</strong></td>
+                        <td>registering a JMX MBean in the Apache Karaf MBeanServer</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-mbean-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Profile</strong></td>
+                        <td>creating several profiles (in a registry) and use these profiles to create custom distributions.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-profile-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>REST</strong></td>
+                        <td>using JAX-RS to implement a REST service.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-rest-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Scheduler</strong></td>
+                        <td>creating a runnable service periodically executed by the Apache Karaf scheduler.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-scheduler-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Service Component Runtime</strong></td>
+                        <td>using services with annotations with the OSGi compendium specification.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-scr-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Servlet</strong></td>
+                        <td>registering a servlet in the Karaf HTTP Service with different approaches.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-servlet-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>SOAP</strong></td>
+                        <td>using JAX-WS to implement a SOAP service.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-soap-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>URL Namespace Handler</strong></td>
+                        <td>creating a new URL namespace handler and use it in all Apache Karaf parts.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-url-namespace-handler-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
 
             <div class="content--panel">
