--- a/src/main/webapp/privacy.html
+++ b/src/main/webapp/privacy.html
@@ -1,59 +1,74 @@
-<!DOCTYPE html>
-<html data-mobile-support="" data-search="" data-hero-banner="" data-platform-downloads="">
-<head>
-    <meta http-equiv="content-type" context="text/html; charset=UTF-8">
-    <title>Apache Karaf</title>
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no"
-          id="Viewport" name="viewport">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet"
-          type="text/css"/>
-    <link href="css/karaf.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
-    <meta content="Apache Karaf" property="og:title">
-    <meta content="images/karaf.png" property="og:image">
-    <meta content="Upgrade to the Enterprise class platform. Karaf provides dual polymorphic container and application bootstrapping paradigms to the Enterprise. Focus on your business code and application, Karaf deals with the rest"
-          property="og:description">
-</head>
-<body>
-<div class="viewport">
-    <header class="navbar header--navbar">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                <div class="karaf-logo--container">
-                    <a class="karaf-logo" href="index.html"><span></span></a>
-                </div>
-                <ul class="nav pull-right">
-                    <li class="navbar-link">
-                        <a href="news.html">News</a>
-                    </li>
-                    <li class="navbar-link">
-                        <a href="download.html">Download</a>
-                    </li>
-                    <li class="navbar-link">
-                        <a href="documentation.html">Documentation</a>
-                    </li>
-                    <li class="navbar-link">
-                        <a href="projects.html">Projects</a>
-                    </li>
-                    <li class="navbar-link">
-                        <a href="community.html">Community</a>
-                    </li>
-                    <li class="navbar-link-logo">
-                        <a href="http://www.apache.org"><img src="images/apache-feather-tm-new.svg" width="24px" /></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-<br/><br/><br/><br/><br/><br/>
-    <div class="body--container container-fluid ">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="images/favicon.ico">
+
+    <title>Apache Karaf - The enterprise class platform</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Fontawesome CSS CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link href="css/karaf.css" rel="stylesheet">
+  </head>
+  <body>
+
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <div class="content--panel">
-                <h2>Privacy Policy</h2>
-                Information about your use of this website is collected using server access logs and a tracking cookie. The collected information consists of the following :<br/>
-                <br/>
+          <a class="navbar-brand" href="index.html"><img src="images/karaf-logo-new.png"/></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+            <div>
+              <ul class="navbar-nav mr-auto align-items-center text-uppercase">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="news.html">News</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="download.html">Download</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="documentation.html">Documentation</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="community.html">Community</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="https://www.apache.org"><img src="images/apache-feather-tm-new.png"/></a>
+                </li>
+              </ul>
+            <div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main role="main">
+
+      <!-- Marketing messaging and featurettes
+      ================================================== -->
+      <!-- Wrap the rest of the page in another container to center all the content. -->
+
+      <div class="container">
+
+        <!-- CONTRIBUTE -->
+        <div class="row mb-5 mt-5">
+            <div class="col">
+              <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-eye"></i> Privacy Policy</h2>
+              <p>Information about your use of this website is collected using server access logs and a tracking cookie. The collected information consists of the following :</p>
                 <ol>
                     <li>The IP address from which you access the website</li>
                     <li>The type of browser and operating system you use to access our site</li>
@@ -61,29 +76,35 @@
                     <li>The pages you visit and</li>
                     <li>The addresses of pages from where you followed a link to our site.</li>
                 </ol>
+
+              <p>
                 Part of this information is gathered using a tracking cookie set by the <a href="http://www.google.com/analytics/">Google Analytics</a> service and handled by Google as described in their <a href="http://www.google.com/privacy.html">privacy policy</a>. See your browser documentation for instructions on how to disable the cookie if you prefer not to share this data with Google.<br/>
                 <br/>
                 We use the gathered information to help us make our site more useful to visitors and to better understand how and when our site is used. We do not track or collect personally identifiable information or associate gathered data with any personally identifying information from other sources.<br/>
                 <br/>
-                By using this website, you consent to the collection of this data in the manner and for the purpose described above.<br/>
+                By using this website, you consent to the collection of this data in the manner and for the purpose described above.
+              </p>              
             </div>
-        </div>
-    </div>
+        </div>   
+    </main>
 
-    <footer class="footer">
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="footer-documentation--text">
-                    &copy; <span>2018</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
-                        href="privacy.html">Privacy Policy</a><br/>
-                    Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are
-                    trademarks of The Apache Software Foundation.</div>
-                </div>
-            </div>
-        </div>
+    <!-- FOOTER -->
+    <footer class="container-fluid bg-dark pt-5 pb-3 text-white text-center ">
+      <div class="mx-auto pb-5">
+        <h2>Ready, efficient, and productive with Karaf in a minute !</h2>
+        <p class="pt-2"><a class="btn btn-primary" href="documentation.html" role="button">Read Documentation &raquo;</a></p>
+      </div>
+      <p class="float-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - <a href="privacy.html">Privacy Policy</a><br/>
+      Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.</p>
     </footer>
-    <div id="scrim"></div>
-</div>
-</body>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="assets/js/vendor/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
