Change Open3m to Yupiik organization for commercial support

--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -299,7 +299,7 @@
                             <td>provides consulting and training for Apache Karaf and related technologies e.g. Apache Camel, Apache ActiveMQ and CXF for the DACH region.</td>
                         </tr>
                         <tr>
-                            <td><a href="https://www.open3m.fr">Open3m</a></td>
+                            <td><a href="https://www.yupiik.com">Yupiik</a></td>
                             <td>contributes and commits to the Apache Karaf project. Provides consulting, training and support for Apache Karaf and related projects like Apache Camel, Apache ActiveMQ, Apache CXF.</td>
                         </tr>
                         <tr>
@@ -474,7 +474,7 @@
                     <td>Fran&ccedil;ois Papon</td>
                     <td>fpapon</td>
                     <td></td>
-                    <td><a href="https://www.open3m.io">Open3m</a></td>
+                    <td><a href="https://www.yupiik.com">Yupiik</a></td>
                 </tr>
                 </tbody>
             </table>
